--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
   <footer>
     © 1996 Cebosão Web Productions. Todos os direitos reservados.
     <br>
-    <a href="mailto:cao.roludo@geocities.com">Email: cao.roludo@geocities.com</a> <!-- Email estilo GeoCities -->
+    <a href="mailto:dog@cachorroroludo.com.br">Email: cao.roludo@geocities.com</a> <!-- Email estilo GeoCities -->
   </footer>
 
   <script>
