--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   </table>
 
   <footer>
-    © 1996 Cebosão Web Productions. Todos os direitos reservados.
+    © 1996 Cebosão Web Productions. Alien Hacker Page.
     <br>
     <a href="mailto:dog@cachorroroludo.com.br">Email: cao.roludo@geocities.com</a> <!-- Email estilo GeoCities -->
   </footer>
