--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <!-- Áudio confiável -->
         <audio id="dog-audio" loop>
-          <source src="https://upload.wikimedia.org/wikipedia/commons/8/88/Dog_bark.ogg" type="audio/ogg">
+          <source src="audio/gemido-whatsapp.mp3" type="audio/mpeg">
           Seu navegador não suporta áudio.
         </audio>
       </td>
