--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
         <!-- Contador de visitas -->
         <div class="visitor-counter">
-          Visitantes: <span id="visitor-count" class="blinking">000001</span>
+          Odeio Petistas: <span id="visitor-count" class="blinking">000001</span>
         </div>
 
         <div class="ip-box" id="ip-container">
