--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <td>
         <h1>Prazer! Cão Roludo!</h1>
 
-        <h2>Me conte, como você me achou? 😎</h2>
+        <h2>Austin Powers 😎</h2>
 
         <!-- Contador de visitas -->
         <div class="visitor-counter">
