--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <!-- Contador de visitas -->
         <div class="visitor-counter">
-          Odeio Petistas: <span id="visitor-count" class="blinking">000001</span>
+          otários: <span id="visitor-count" class="blinking">000001</span>
         </div>
 
         <div class="ip-box" id="ip-container">
