--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: black;
       color: lime;
       font-family: "Courier New", Courier, monospace;
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1083.cur'), auto; /* Cursor personalizado retrô */
+      cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1083.cur'), auto;
     }
 
     table {
@@ -34,7 +34,7 @@
       text-align: center;
       color: cyan;
       margin: 0.5em 0;
-      text-shadow: 2px 2px #ff00ff; /* Sombra neon típica dos anos 90 */
+      text-shadow: 2px 2px #ff00ff;
     }
 
     marquee {
@@ -50,7 +50,7 @@
     }
 
     a:hover {
-      color: hotpink; /* Cor vibrante ao passar o mouse */
+      color: hotpink;
     }
 
     .ip-box {
@@ -63,10 +63,6 @@
       text-align: center;
       line-height: 1.6;
       word-wrap: break-word;
-    }
-
-    .blinking {
-      animation: blink 1s infinite;
     }
 
     @keyframes blink {
@@ -84,14 +80,14 @@
       display: inline-block;
       margin: 6px 10px;
       padding: 5px 10px;
-      background: linear-gradient(45deg, #ff00ff, #00ffff); /* Gradiente vibrante */
-      border: 2px outset yellow; /* Estilo 3D */
+      background: linear-gradient(45deg, #ff00ff, #00ffff);
+      border: 2px outset yellow;
       border-radius: 3px;
       text-decoration: none;
     }
 
     .nav-links a:hover {
-      border: 2px inset yellow; /* Efeito de "clique" */
+      border: 2px inset yellow;
     }
 
     img.main-img {
@@ -131,7 +127,7 @@
       border-radius: 5px;
       cursor: pointer;
       font-weight: bold;
-      box-shadow: 3px 3px 0 #ff00ff; /* Sombra colorida */
+      box-shadow: 3px 3px 0 #ff00ff;
     }
 
     .audio-button:hover {
@@ -184,25 +180,23 @@
   <table>
     <tr>
       <td>
-               
-
         <!-- Contador de visitas -->
         <div class="visitor-counter">
-          otários: <span id="visitor-count" class="blinking">000001</span>
+          otários: <span id="visitor-count">000001</span>
         </div>
 
+        <!-- IP do visitante -->
         <div class="ip-box" id="ip-container">
-          Seu IP: <span id="ip-address" class="blinking">Carregando...</span>
+          Seu IP: <span id="ip-address">Carregando...</span>
         </div>
 
         <img src="imagens/cachorro.png" alt="Cachorro bonito" class="main-img" id="dog-image" />
 
-       
         <div class="nav-links">
           <a href="index.html">Início</a>
           <a href="sobre.html">Sobre</a>
           <a href="contato.html">Contato</a>
-          <a href="guestbook.html">Livro de Visitas</a> <!-- Livro de visitas, clássico dos anos 90 -->
+          <a href="guestbook.html">Livro de Visitas</a>
         </div>
 
         <!-- Dancing Baby -->
@@ -223,7 +217,7 @@
   <footer>
     © 1996 Cebosão Web Productions. Alien Hacker Page.
     <br>
-    <a href="mailto:dog@cachorroroludo.com.br">Email: cao.roludo@geocities.com</a> <!-- Email estilo GeoCities -->
+    <a href="mailto:dog@cachorroroludo.com.br">Email: cao.roludo@geocities.com</a>
   </footer>
 
   <script>
