--- a/index.html
+++ b/index.html
@@ -6,257 +6,184 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://emoji.gg/assets/emoji/7293-doge.png" type="image/png">
   <style>
+    /* 1) Página toda ocupa 100vh, sem scroll */
     html, body {
       margin: 0;
       padding: 0;
-      max-width: 100%;
-      overflow-x: hidden;
-      background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
-      background-color: black;
+      height: 100vh;
+      overflow: hidden;
+      background: url('https://www.transparenttextures.com/patterns/asfalt-dark.png') black;
       color: lime;
       font-family: "Courier New", Courier, monospace;
       cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1083.cur'), auto;
     }
 
-    table {
-      margin: 40px auto;
-      width: 100%;
-      max-width: 900px;
-      border: 3px double yellow;
-      background-color: #000033;
-      border-collapse: collapse;
-      box-sizing: border-box;
-    }
-
-    td {
-      position: relative;
-      padding: 20px;
-      padding-bottom: 90px;
-    }
-
-    h1, h2 {
-      text-align: center;
-      color: cyan;
-      margin: 0.5em 0;
-      text-shadow: 2px 2px #ff00ff;
+    /* 2) Flex vertical: marquee, conteúdo e footer */
+    .page-wrapper {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
     }
 
     marquee {
       display: block;
       width: 100%;
-      overflow: hidden;
       box-sizing: border-box;
       color: red;
-      font-size: 24px;
+      font-size: 1.2rem;
       font-weight: bold;
+      margin: 0;
+      padding: 5px 0;
     }
 
-    a {
-      color: yellow;
-      text-decoration: underline;
-      font-weight: bold;
+    /* 3) Conteúdo central, comprimido para caber */
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 5px;
+      box-sizing: border-box;
     }
 
-    a:hover {
-      color: hotpink;
-    }
-
-    .ip-box {
-      margin-top: 20px;
-      background-color: navy;
-      color: white;
-      padding: 10px;
-      font-size: 18px;
-      border: 2px dashed cyan;
+    .visitor-counter, .ip-box {
+      width: 90%;
+      max-width: 400px;
       text-align: center;
-      line-height: 1.6;
-      word-wrap: break-word;
+      border: 2px solid yellow;
+      padding: 5px;
+      box-sizing: border-box;
+      font-size: 1rem;
+      background: #000;
+    }
+
+    .visitor-counter { color: red; }
+    .ip-box { background: navy; color: white; border-style: dashed; }
+
+    img.main-img {
+      width: 40vw;
+      max-width: 200px;
+      max-height: 30vh;
+      object-fit: contain;
+      border: 3px solid lime;
+      border-radius: 6px;
+      box-shadow: 0 0 10px green;
+      transition: transform 0.6s ease-in-out;
+      cursor: pointer;
+    }
+    img.main-img:hover {
+      transform: rotate(360deg) scale(1.1);
     }
 
     .nav-links {
-      text-align: center;
-      margin-top: 20px;
+      display: flex;
       flex-wrap: wrap;
+      justify-content: center;
+      gap: 6px;
     }
-
     .nav-links a {
-      display: inline-block;
-      margin: 6px 10px;
-      padding: 5px 10px;
-      background: linear-gradient(45deg, #ff00ff, #00ffff);
+      padding: 4px 8px;
+      font-size: 0.9rem;
+      background: linear-gradient(45deg,#ff00ff,#00ffff);
       border: 2px outset yellow;
       border-radius: 3px;
       text-decoration: none;
     }
-
     .nav-links a:hover {
-      border: 2px inset yellow;
-    }
-
-    img.main-img {
-      display: block;
-      margin: 20px auto;
-      width: 100%;
-      max-width: 300px;
-      height: auto;
-      border: 4px solid lime;
-      border-radius: 8px;
-      box-shadow: 0 0 20px green;
-      transition: transform 0.6s ease-in-out;
-      cursor: pointer;
-    }
-
-    img.main-img:hover {
-      transform: rotate(720deg) scale(1.2);
+      border-style: inset;
     }
 
     .corner-baby {
       position: absolute;
-      bottom: 10px;
-      left: 10px;
-      width: 80px;
-      max-width: 100px;
-      height: auto;
-      z-index: 10;
+      bottom: 5px;
+      left: 5px;
+      width: 15vw;
+      max-width: 80px;
+      max-height: 15vh;
     }
 
     .audio-button {
-      display: block;
-      margin: 20px auto 0;
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: lime;
-      color: black;
+      padding: 6px 12px;
+      font-size: 0.9rem;
+      background: lime;
+      color: #000;
       border: 2px solid yellow;
-      border-radius: 5px;
+      border-radius: 4px;
+      box-shadow: 2px 2px 0 #ff00ff;
       cursor: pointer;
-      font-weight: bold;
-      box-shadow: 3px 3px 0 #ff00ff;
     }
-
     .audio-button:hover {
-      background-color: yellow;
+      background: yellow;
       color: navy;
-    }
-
-    .visitor-counter {
-      text-align: center;
-      margin: 20px auto;
-      padding: 10px;
-      background-color: black;
-      color: red;
-      font-family: "Arial Black", Gadget, sans-serif;
-      font-size: 20px;
-      border: 2px solid yellow;
-      width: 200px;
-    }
-
-    .animated-gif {
-      display: block;
-      margin: 20px auto;
-      width: 100px;
-      border: 2px solid cyan;
     }
 
     footer {
       text-align: center;
+      font-size: 0.8rem;
       color: gray;
-      font-size: 14px;
-      margin-top: 30px;
-      padding: 10px;
+      padding: 4px 0;
+      background: #000;
     }
 
-    /* RESPONSIVIDADE */
-    @media (max-width: 600px) {
-      h1 { font-size: 20px; }
-      h2 { font-size: 16px; }
-      .ip-box { font-size: 16px; padding: 8px; }
-      .corner-baby { width: 60px; }
-      .audio-button { font-size: 14px; padding: 8px 16px; }
-      .visitor-counter { font-size: 16px; width: 150px; }
-      .animated-gif { width: 80px; }
-      .nav-links a {
-        font-size: 14px;
-        padding: 6px 8px;
-        margin: 5px 4px;
-      }
+    /* 4) Ajustes para mobile (fonte menor, elementos ainda mais compactos) */
+    @media (max-width:600px) {
+      marquee { font-size:1rem; }
+      .visitor-counter, .ip-box { font-size:0.9rem; padding:4px; }
+      img.main-img { width:50vw; max-height:25vh; }
+      .nav-links a { font-size:0.8rem; padding:3px 6px; }
+      .audio-button { font-size:0.8rem; padding:4px 8px; }
+      .corner-baby { width:20vw; max-height:12vh; }
     }
   </style>
 </head>
 <body>
+  <div class="page-wrapper">
+    <marquee behavior="alternate">💾 Bem-vindo à Página Oficial do Cão Roludo! 🐶</marquee>
+    <div class="main-content">
+      <div class="visitor-counter">
+        otários: <span id="visitor-count">000001</span>
+      </div>
+      <div class="ip-box">
+        Seu IP: <span id="ip-address">Carregando...</span>
+      </div>
+      <img src="imagens/cachorro.png" alt="Cachorro bonito" class="main-img" id="dog-image">
+      <div class="nav-links">
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+        <a href="guestbook.html">Livro de Visitas</a>
+      </div>
+      <button class="audio-button" id="play-audio">🔊 Ativar som</button>
+      <img src="IMG_1611.GIF" alt="Dancing Baby" class="corner-baby">
+    </div>
+    <footer>
+      © 1996 Cebosão Web Productions. Alien Hacker Page.
+      <br>
+      <a href="mailto:dog@cachorroroludo.com.br" style="color:gray; text-decoration:none;">cao.roludo@geocities.com</a>
+    </footer>
+  </div>
 
-  <marquee behavior="alternate">💾 Bem-vindo à Página Oficial do Cão Roludo! 🐶</marquee>
-
-  <table>
-    <tr>
-      <td>
-
-        <!-- Contador de visitas -->
-        <div class="visitor-counter">
-          otários: <span id="visitor-count">000001</span>
-        </div>
-
-        <!-- IP do visitante -->
-        <div class="ip-box" id="ip-container">
-          Seu IP: <span id="ip-address">Carregando...</span>
-        </div>
-
-        <img src="imagens/cachorro.png" alt="Cachorro bonito" class="main-img" id="dog-image" />
-
-        <!-- Links -->
-        <div class="nav-links">
-          <a href="index.html">Início</a>
-          <a href="sobre.html">Sobre</a>
-          <a href="contato.html">Contato</a>
-          <a href="guestbook.html">Livro de Visitas</a>
-        </div>
-
-        <!-- Dancing Baby -->
-        <img src="IMG_1611.GIF" alt="Dancing Baby" class="corner-baby">
-
-        <!-- Botão de som -->
-        <button class="audio-button" id="play-audio">🔊 Ativar som</button>
-
-        <!-- Áudio confiável -->
-        <audio id="dog-audio" loop>
-          <source src="audio/gemido-whatsapp.mp3" type="audio/mpeg">
-          Seu navegador não suporta áudio.
-        </audio>
-      </td>
-    </tr>
-  </table>
-
-  <footer>
-    © 1996 Cebosão Web Productions. Alien Hacker Page.
-    <br>
-    <a href="mailto:dog@cachorroroludo.com.br">Email: cao.roludo@geocities.com</a>
-  </footer>
+  <audio id="dog-audio" loop>
+    <source src="audio/gemido-whatsapp.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
-    // Mostrar IP do visitante
+    // IP
     fetch("https://api.ipify.org?format=json")
-      .then((response) => response.json())
-      .then((data) => {
-        document.getElementById("ip-address").textContent = data.ip;
-      })
-      .catch(() => {
+      .then(r=>r.json()).then(d=>{
+        document.getElementById("ip-address").textContent = d.ip;
+      }).catch(()=>{
         document.getElementById("ip-address").textContent = "Erro ao obter IP";
       });
-
-    // Simular contador de visitas (estático para exemplo)
-    document.getElementById('visitor-count').textContent = Math.floor(Math.random() * 10000)
-      .toString()
-      .padStart(6, '0');
-
-    // Tocar áudio ao clicar no botão
-    document.getElementById('play-audio').addEventListener('click', function () {
-      const audio = document.getElementById('dog-audio');
-      audio.play().catch(err => {
-        alert("O navegador bloqueou a reprodução automática. Tente clicar novamente.");
-        console.error(err);
-      });
+    // contador fake
+    document.getElementById('visitor-count').textContent =
+      Math.floor(Math.random()*10000).toString().padStart(6,'0');
+    // áudio
+    document.getElementById('play-audio').addEventListener('click',()=>{
+      const a = document.getElementById('dog-audio');
+      a.play().catch(()=>alert('Clique novamente para autorizar áudio.'));
     });
   </script>
-
 </body>
 </html>
